# SPLN

./: help.txt
Normalização/: afafjlkafa.txt  normaliza.py  outputfile.txt
Normalização/Data/: eg.txt  pt.txt
TP1/: 10frases.txt  final.csv  final_lema.csv  generateDataset.py  makepyproject.py  out.txt  pyproject.toml  script.py  sentiPT.py  sentilexPT.py  sentiment.csv  tipagem.py
TP1/HP/: leia.py  ourGraph.py  vader.py
TP1/HP/capitulos/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
TP1/HP/chapters/: 17.txt
TP1/datasets/: booster.txt  lex_pt.txt  negate.txt  sentiment_lexicon_twitch.csv
TP2/: IRS_attributes.json  README.md  data_fecth.py  data_fetch.py  format_info.py  ir.py  main.py  qa.py  respostas.json
TP2/data/: README.md  micro-dr.sql  politicas_emigração.json
TP2/information/: Acordo_com_a_Angola_info.txt  Acordo_com_o_Cabo_Verde_info.txt  Aviso_sobre_o_covid_info.txt  De_que_Universidade_é_o_José_João_Dias_de_Almeida_info.txt  De_que_Universidade_é_o_Jośe_João_Dias_de_Almeida_info.txt  Despacho_sobre_a_NATO_info.txt  Exército_info.txt  IRS_info.txt  Lei_sobre_o_IRS_info.txt  Lei_sobre_o_aborto_info.txt  Nome_de_um_Juiz_info.txt  Normas_de_Segurança_info.txt  Quem_morreu_em_1989_info.txt  Quem_é_o_reitor_da_Universidade_do_Minho_info.txt  Tribunal_info.txt
TP2/prepared_data/: Acordo_com_a_Angola_attributes.json  Acordo_com_o_Cabo_Verde_attributes.json  Aviso_sobre_o_covid_attributes.json  De_que_Universidade_é_o_José_João_Dias_de_Almeida_attributes.json  (+13 more)
(+16 files in other folders)
